Add convertor and live currency

--- a/misc/templates/misc/home.html
+++ b/misc/templates/misc/home.html
@@ -23,39 +23,15 @@
             Our company has started with a mission of borderless fintech. We are really good and great things happen here. We are proud to say that we get any **** financial requests done!
         </p>
     </div>
-    <h2>Live Currency</h2>
-    <table>
-        <thead>
-            <th>USD</th>
-            <th>Euro</th>
-        </thead>
-        <tr>
-            <td>
-                <img src="chart.jpeg">
-            </td>
-            <td>
-                <img src="chart.jpeg">
-            </td>
-        </tr>
-    </table>
+    <h2>Live Currency and Converter</h2>
 
-    <h2>Converter</h2>
+    <!--Currency Converter widget by FreeCurrencyRates.com -->
 
-    <form>
-        <label for="amount">Amount</label>
-        <input id="amount" value="20">
-        <label for="src_currency">Source Currency</label>
-        <select id="src_currency" value="$">
-            <option value="$">$</option>
-            <option value="Rial">Rial</option>
-        </select>
-        <label for="dst_currency">Destination Currency</label>
-        <select id="dst_currency" value="Rial">
-            <option value="$">$</option>
-            <option value="Rial">Rial</option>
-        </select>
-        <label>Result: 984580 Rial</label>
-    </form>
+    <div id='gcw_mainFQads0YUL' class='gcw_mainFQads0YUL'></div>
+    <a id='gcw_siteFQads0YUL' href='https://freecurrencyrates.com/en/'>FreeCurrencyRates.com</a>
+    <script>function reloadFQads0YUL(){ var sc = document.getElementById('scFQads0YUL');if (sc) sc.parentNode.removeChild(sc);sc = document.createElement('script');sc.type = 'text/javascript';sc.charset = 'UTF-8';sc.async = true;sc.id='scFQads0YUL';sc.src = 'https://freecurrencyrates.com/en/widget-vertical?iso=USDEURGBPJPYCNYXUL&df=2&p=FQads0YUL&v=fits&source=fcr&width=245&width_title=0&firstrowvalue=1&thm=A6C9E2,FCFDFD,4297D7,5C9CCC,FFFFFF,C5DBEC,FCFDFD,2E6E9E,000000&title=Currency%20Converter&tzo=-270';var div = document.getElementById('gcw_mainFQads0YUL');div.parentNode.insertBefore(sc, div);} reloadFQads0YUL(); </script>
+    <!-- put custom styles here: .gcw_mainFQads0YUL{}, .gcw_headerFQads0YUL{}, .gcw_ratesFQads0YUL{}, .gcw_sourceFQads0YUL{} -->
+    <!--End of Currency Converter widget by FreeCurrencyRates.com -->
 
     <h2>Contact Us</h2>
     <form>
