--- a/management/templates/management/management_dashboard.html
+++ b/management/templates/management/management_dashboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Dashboard</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../../../documents/design/wireframe/styles.css">
     </head>
     <body>
         <table>
@@ -11,14 +11,14 @@
                 <td width="20%">
                     <table>
                         <tbody>
-                        <tr><td><a href="costumers.html">Costumers</a></td></tr>
-                        <tr><td><a href="employees.html">Employees</a></td></tr>
-                        <tr><td><a href="requests.html">Requests</a></td></tr>
-                        <tr><td><a href="charge.html">Charge</a></td></tr>
-                        <tr><td><a href="dashboard.html">Log (Dashboard)</a></td></tr>
-                        <tr><td><a href="transactions.html">Currency Report</a></td></tr>
-                        <tr><td><a href="new_request_type.html">Create New Request Type</a></td></tr>
-                        <tr><td><a href="settings.html">Settings</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/costumers.html">Costumers</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/employees.html">Employees</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/requests.html">Requests</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/charge.html">Charge</a></td></tr>
+                        <tr><td><a href="management_dashboard.html">Log (Dashboard)</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/transactions.html">Currency Report</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/new_request_type.html">Create New Request Type</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/settings.html">Settings</a></td></tr>
                         </tbody>
                     </table>
                 </td>
