--- a/workflow/templates/workflow/costumer_dashboard.html
+++ b/workflow/templates/workflow/costumer_dashboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Dashboard</title>
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../../../documents/design/wireframe/styles.css">
     </head>
     <body>
         <table>
@@ -11,11 +11,11 @@
                 <td width="20%">
                     <table>
                         <tbody>
-                        <tr><td><a href="profile.html">Profile</a></td></tr>
-                        <tr><td><a href="online_wallet.html">Wallet</a></td></tr>
-                        <tr><td><a href="new_request.html">Requests</a></td></tr>
-               		<tr><td><a href="requests_history.html">Requests History</a></td></tr>
-                        <tr><td><a href="dashboard.html">Log</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/customer/profile.html">Profile</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/customer/online_wallet.html">Wallet</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/customer/new_request.html">Requests</a></td></tr>
+               		<tr><td><a href="../../../documents/design/wireframe/customer/requests_history.html">Requests History</a></td></tr>
+                        <tr><td><a href="costumer_dashboard.html">Log</a></td></tr>
                         </tbody>
                     </table>
                 </td>
