Complete create servie test and add web driver env var

--- a/management/templates/management/management_dashboard.html
+++ b/management/templates/management/management_dashboard.html
@@ -17,7 +17,7 @@
                         <tr><td><a href="../../../documents/design/wireframe/admin/charge.html">Charge</a></td></tr>
                         <tr><td><a href="management_dashboard.html">Log (Dashboard)</a></td></tr>
                         <tr><td><a href="../../../documents/design/wireframe/admin/transactions.html">Currency Report</a></td></tr>
-                        <tr><td><a href="../../../documents/design/wireframe/admin/new_request_type.html">Create New Request Type</a></td></tr>
+                        <tr><td><a href="new_request_type.html">Create New Request Type</a></td></tr>
                         <tr><td><a href="../../../documents/design/wireframe/admin/settings.html">Settings</a></td></tr>
                         </tbody>
                     </table>
