--- a/management/templates/management/new_request_type.html
+++ b/management/templates/management/new_request_type.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../../documents/design/wireframe/styles.css">
     <title>new request type</title>
 </head>
 <body>
-<form method="get" action="new_request_type.html">
+<form method="post" action="">
     <label for="title">Title: </label>
     <input type="text" id="title" value="TOEFEL EXAM">
     
@@ -15,8 +15,8 @@
 
     <label for="currency">Currency</label>
     <select id="currency" value="$">
-        <option value="$">$</option>
-        <option value="Rial">Rial</option>
+        <option value="EUR">$</option>
+        <option value="IRR">Rial</option>
     </select>
 
     <br>
