--- a/management/templates/management/management_dashboard.html
+++ b/management/templates/management/management_dashboard.html
@@ -18,7 +18,7 @@
                         <tr><td><a href="management_dashboard.html">Log (Dashboard)</a></td></tr>
                         <tr><td><a href="../../../documents/design/wireframe/admin/transactions.html">Currency Report</a></td></tr>
                         <tr><td><a href="new_request_type.html">Create New Request Type</a></td></tr>
-                        <tr><td><a href="../../../documents/design/wireframe/admin/settings.html">Settings</a></td></tr>
+                        <tr><td><a href="{% url 'management:settings' %}">Settings</a></td></tr>
                         </tbody>
                     </table>
                 </td>
