--- a/management/templates/management/settings.html
+++ b/management/templates/management/settings.html
@@ -5,10 +5,10 @@
     <title>Settings</title>
 </head>
 <body>
-<form action="settings_changed.html">
+<form method="get" action="{% url 'management:settings_changed' %}">
     <label for="max_transaction_per_day">Max Transaction Per Day</label>
     <input type="number" id="max_transaction_per_day">
-    <label for="min_transaction_per_day">Max Transaction Per Day</label>
+    <label for="min_transaction_per_day">Min Transaction Per Day</label>
     <input type="number" id="min_transaction_per_day">
     <input type="submit">
 </form>
