--- a/workflow/templates/workflow/requests_history.html
+++ b/workflow/templates/workflow/requests_history.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../../documents/design/wireframe/styles.css">
     <title>Transactions History</title>
 </head>
 <body>
+    <h2>Requests</h2>
     <table>
         <thead>
             <th>Employee</th>
@@ -18,43 +19,43 @@
                 <td>gspaid</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../../../documents/design/wireframe/customer/single_request.html">Check New Request</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../../../documents/design/wireframe/customer/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../../../documents/design/wireframe/customer/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../../../documents/design/wireframe/customer/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../../../documents/design/wireframe/customer/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../../../documents/design/wireframe/customer/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../../../documents/design/wireframe/customer/single_request.html">Details</a></td>
             </tr>
         </thead>
     </table>
