Add test for admin views users

--- a/management/templates/management/management_dashboard.html
+++ b/management/templates/management/management_dashboard.html
@@ -11,8 +11,7 @@
                 <td width="20%">
                     <table>
                         <tbody>
-                        <tr><td><a href="../../../documents/design/wireframe/admin/costumers.html">Costumers</a></td></tr>
-                        <tr><td><a href="../../../documents/design/wireframe/admin/employees.html">Employees</a></td></tr>
+                        <tr><td><a href="../../../documents/design/wireframe/admin/costumers.html">Users</a></td></tr>
                         <tr><td><a href="../../../documents/design/wireframe/admin/requests.html">Requests</a></td></tr>
                         <tr><td><a href="../../../documents/design/wireframe/admin/charge.html">Charge</a></td></tr>
                         <tr><td><a href="{% url 'management:management_dashboard' %}">Log (Dashboard)</a></td></tr>
