profile change test

--- a/authorization/templates/edit_user_info/profile.html
+++ b/authorization/templates/edit_user_info/profile.html
@@ -27,10 +27,10 @@
                     <option value="SMS">SMS</option>
                 </select>
                 <br><br>
-                <input type="submit" value="CHANGE PROFILE">
+                <input id="change-profile" type="submit" value="CHANGE PROFILE">
             </form>
             <form method="get" action="change_password.html">
-                <input type="submit" value="CHANGE PASSWORD">
+                <input id="change-password" type="submit" value="CHANGE PASSWORD">
             </form>
 
 </body>
