use cases updated, charge_wallet test and test costumer request

--- a/workflow/templates/workflow/costumer_dashboard.html
+++ b/workflow/templates/workflow/costumer_dashboard.html
@@ -12,7 +12,7 @@
                     <table>
                         <tbody>
                         <tr><td><a href="../../../documents/design/wireframe/customer/profile.html">Profile</a></td></tr>
-                        <tr><td><a href="../../../documents/design/wireframe/customer/online_wallet.html">Wallet</a></td></tr>
+                        <tr><td><a href="{% url 'financial:online_wallet' %}">Wallet</a></td></tr>
                         <tr><td><a href="{% url 'workflow:costumer_requests' %}">Requests</a></td></tr>
                		<tr><td><a href="{% url 'workflow:requests' %}">Requests History</a></td></tr>
                         <tr><td><a href="{% url 'workflow:dashboard' %}">Log</a></td></tr>
