use case tests 14,19 updated

--- a/authorization/templates/edit_user_info/change_password.html
+++ b/authorization/templates/edit_user_info/change_password.html
@@ -6,7 +6,7 @@
 </head>
 <br><br>
 <body>
-    <form method="get" action="changed_password.html">
+    <form method="get" action="{% url 'changed_password' %}">
  	<label for="oldpassword">Old Password</label>
         <input type="password" id="oldpassword">
 	<br><br>
