--- a/authorization/templates/edit_user_info/changed_password.html
+++ b/authorization/templates/edit_user_info/changed_password.html
@@ -7,7 +7,7 @@
 <strong>YOUR PASSWORD HAS BEEN CHANGED</strong>
 <br><br>
 <body>
-    <form method="get" action="../../../workflow/templates/workflow/costumer_dashboard.html">
+    <form method="get" action="{% url 'workflow:dashboard' %}">
         <input type="submit" value="HOME">
     </form>
 </body>
