--- a/financial/templates/financial/online_wallet.html
+++ b/financial/templates/financial/online_wallet.html
@@ -28,23 +28,23 @@
 
 <br>
 
-<form method="get" action="online_wallet.html">
-    <label for="amount2">Amount to change:</label>
-    <input type="number" id="amount2">
-    <select id="currency" value="$">
+<form method="get" action="{% url 'financial:changed' %}">
+    <label for="amount-to-change">Amount to change:</label>
+    <input type="number" id="amount-to-change">
+    <select id="from-currency" value="$">
         <option value="$">$</option>
         <option value="Rial">Rial</option>
         <option value="Euro">Euro</option>
     </select>
-    <label for="amount3">Amount you get:</label>
-    <input type="number" readonly="readonly" id="amount3" value="48000">
-    <select id="currency3" value="$">
+    <label for="amount-to-get">Amount you get:</label>
+    <input type="number" readonly="readonly" id="amount-to-get" value="48000">
+    <select id="to-currency" value="$">
         <option value="$">$</option>
         <option value="Rial">Rial</option>
         <option value="Euro">Euro</option>
     </select>
-    <input type="submit" value="update change info">
-    <input type="submit" value="Change!">
+    <input id="update-change-info" type="submit" value="update change info">
+    <input id="change" type="submit" value="Change!">
 </form>
 
 </body>
