--- a/authorization/templates/edit_user_info/profile.html
+++ b/authorization/templates/edit_user_info/profile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-            <form action="{% url 'changed_profile' %}">
+            <form action="{% url 'change_profile' %}">
                 <label for="firstName">First name</label>
                 <input type="string" id="firstName">
                 <br><br>
@@ -29,7 +29,7 @@
                 <br><br>
                 <input id="change-profile" type="submit" value="CHANGE PROFILE">
             </form>
-            <form method="get" action="{% url 'change_password' %}">
+            <form method="get" action="{% url 'auth_password_change' %}">
                 <input id="change-password" type="submit" value="CHANGE PASSWORD">
             </form>
 
