--- a/workflow/templates/workflow/costumer_dashboard.html
+++ b/workflow/templates/workflow/costumer_dashboard.html
@@ -11,7 +11,7 @@
                 <td width="20%">
                     <table>
                         <tbody>
-                        <tr><td><a href="{%  url 'profile' %}">Profile</a></td></tr>
+                        <tr><td><a href="{%  url 'change_profile' %}">Profile</a></td></tr>
                         <tr><td><a href="{%  url 'financial:internal_payment' %}">Internal Payment</a></td></tr>
                         <tr><td><a href="{% url 'financial:online_wallet' %}">Wallet</a></td></tr>
                         <tr><td><a href="{% url 'workflow:costumer_requests' %}">Requests</a></td></tr>
