--- a/misc/templates/misc/base.html
+++ b/misc/templates/misc/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GSPaid</title>
+    <title>{% block page_title %}GSPaid{% endblock page_title %}</title>
 </head>
 <body>
     {% block messages %}
