Fix change password test

--- a/authorization/templates/edit_user_info/profile.html
+++ b/authorization/templates/edit_user_info/profile.html
@@ -7,6 +7,6 @@
                 {{ user_form }}
                 <input type="submit" value="Save Profile">
             </form>
-            <a href="{% url 'auth_password_change' %}">CHANGE PASSWORD</a>
+            <a href="{% url 'auth_password_change' %}">Change Password</a>
 
 {% endblock content %}
