--- a/misc/templates/misc/home.html
+++ b/misc/templates/misc/home.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <link rel="stylesheet" href="../styles.css">
-</head>
-<body>
+{% extends 'misc/base.html' %}
+{% block page_title %}Home{% endblock page_title %}
+{% block content %}
     <div>
         <h1>
             GSPaid
@@ -43,5 +38,4 @@
         <textarea id="description"></textarea>
         <input type="submit">
     </form>
-</body>
-</html>
+{% endblock content %}
