--- a/management/templates/management/new_request_type.html
+++ b/management/templates/management/new_request_type.html
@@ -1,30 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../../documents/design/wireframe/styles.css">
-    <title>new request type</title>
-</head>
-<body>
-<form method="post" action="">
-    <label for="title">Title: </label>
-    <input type="text" id="title" value="TOEFEL EXAM">
-    
-    <label for="amount">Amount: </label>
-    <input type="number" id="amount" value="100000000">
-
-    <label for="currency">Currency</label>
-    <select id="currency" value="$">
-        <option value="EUR">$</option>
-        <option value="IRR">Rial</option>
-    </select>
-
-    <br>
-    <label for="extra-info">extra info needed: </label>
-    <textarea rows="8" type="text" id="extra-info" >PostalCode  Father's name</textarea>
-
+{% extends 'misc/base.html' %}
+{% block content %}
+<form method="post" action={% url 'management:add_request_type' %}>
+    {% csrf_token %}
+    {{ new_request_type_from }}
     <input type="submit" value="Submit">
 
 </form>
-</body>
-</html>
+{% endblock content %}
