Handled user_new_request and requests_history use cases

--- a/workflow/templates/workflow/costumer_dashboard.html
+++ b/workflow/templates/workflow/costumer_dashboard.html
@@ -14,8 +14,8 @@
                         <tr><td><a href="{%  url 'change_profile' %}">Profile</a></td></tr>
                         <tr><td><a href="{%  url 'financial:internal_payment' %}">Internal Payment</a></td></tr>
                         <tr><td><a href="{% url 'financial:online_wallet' %}">Wallet</a></td></tr>
-                        <tr><td><a href="{% url 'workflow:costumer_requests' %}">Requests</a></td></tr>
-               		<tr><td><a href="{% url 'workflow:requests' %}">Requests History</a></td></tr>
+                        <tr><td><a href="{% url 'workflow:request_types' %}">Requests</a></td></tr>
+               		<tr><td><a href="{% url 'workflow:requests_history' %}">Requests History</a></td></tr>
                         <tr><td><a href="{% url 'workflow:dashboard' %}">Log</a></td></tr>
                         </tbody>
                     </table>
