--- a/misc/templates/misc/home.html
+++ b/misc/templates/misc/home.html
@@ -5,12 +5,15 @@
         <h1>
             GSPaid
         </h1>
-        <a href="rules.html">Rules</a>
-        <a href="../customer/dashboard.html">Dashboard</a>
-        <a href="../admin/dashboard.html">(Admin Dashboard)</a>
-        <a href="../customer/signup_login.html">Register</a>
-        <a href="../customer/login.html">Login</a>
-        <a href="../customer/profile.html">(Profile)</a>
+        <a href="{% url 'misc:rules' %}">Rules</a>
+        <a href="{% url 'registration_register' %}">Register</a>
+        <a href="{% url 'auth_login' %}">Login</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'auth_logout' %}">Logout</a>
+            <a href="{% url 'change_profile' %}">Profile</a>
+            <a href="{% url 'misc:dashboard' %}">Dashboard</a>
+
+        {% endif %}
     </div>
     <h2>About Us</h2>
     <div>
@@ -29,13 +32,9 @@
     <!--End of Currency Converter widget by FreeCurrencyRates.com -->
 
     <h2>Contact Us</h2>
-    <form>
-        <label for="name">Name</label>
-        <input id="name">
-        <label for="email">Email</label>
-        <input id="email">
-        <label for="description"></label>
-        <textarea id="description"></textarea>
-        <input type="submit">
+    <form action="{% url 'home' %}" method="post">
+    {% csrf_token %}
+    {{ contact_admin_form }}
+     <input type="submit" value="Submit">
     </form>
 {% endblock content %}
