--- a/workflow/templates/workflow/costumer_dashboard.html
+++ b/workflow/templates/workflow/costumer_dashboard.html
@@ -15,6 +15,7 @@
                         <tr><td><a href="{%  url 'financial:internal_payment' %}">Internal Payment</a></td></tr>
                         <tr><td><a href="{% url 'financial:online_wallet' %}">Wallet</a></td></tr>
                         <tr><td><a href="{% url 'workflow:request_types' %}">Requests</a></td></tr>
+                        <tr><td><a href="{% url 'workflow:exchange_request_types' %}">Exchange Requests</a></td></tr>
                		<tr><td><a href="{% url 'workflow:requests_history' %}">Requests History</a></td></tr>
                         <tr><td><a href="{% url 'workflow:dashboard' %}">Log</a></td></tr>
                         </tbody>
