--- a/workflow/templates/workflow/user_internal_payment_history.html
+++ b/workflow/templates/workflow/user_internal_payment_history.html
@@ -1,6 +1,6 @@
 {% extends 'misc/base.html' %}
 {% block content %}
-    Anonymous Request
+    Internal Payment History
     <br>
     Amount: {{ request.amount }}
     <br>
