--- a/management/templates/management/manage_profile.html
+++ b/management/templates/management/manage_profile.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'misc/base.html' %}
+{% block content %}
+    {% block page_title %}Profile{% endblock page_title %}
+
+            <form action="{% url 'management:manage_profile' user_id%}" method="post">
+                {% csrf_token %}
+                {{ user_form }}
+                <input type="submit" value="Save Profile">
+            </form>
+            <a href="{% url 'auth_password_change' %}">Change Password</a>
+
+{% endblock content %}
