--- a/management/templates/management/new_exchange_request_type.html
+++ b/management/templates/management/new_exchange_request_type.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'misc/base.html' %}
+{% block content %}
+<form method="post" action={% url 'management:add_exchange_request_type' %}>
+    {% csrf_token %}
+    {{ new_exchange_request_type }}
+    <input type="submit" value="Submit">
+
+</form>
+{% endblock content %}
