--- a/workflow/templates/workflow/user_exchange_request_history.html
+++ b/workflow/templates/workflow/user_exchange_request_history.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'misc/base.html' %}
+{% block content %}
+    Request: {{ request.request_type.name }} {{ request.id }}
+    <br>
+    Amount: {{ request.amount }}
+    <br>
+    Source Currency: {{ request.request_type.src_currency }}
+    <br>
+    Destination Currency: {{ request.request_type.dst_currency }}
+    <br>
+    Status: {{ request.first_transaction.status }}
+
+{% endblock content %}
